--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "netlify deploy -p"
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
